<resources>
    <string name="app_name">Cuentos Princesas</string>
    <string name="app_sub_name">Historias para niños</string>
    <string name="app_website">http://www.powerapps10.com/</string>
    <string name="package_name">com.renovationapps.cuentosprincesas</string>
    <string name="app_email">renovation.apps2000@gmail.com</string>
    <string name="default_notification_channel_id">FULL_APPS</string>
    <string name="msg_subscribed">SUBSCRIBED TOPIC</string>
    <string name="msg_subscribe_failed">PROBLEM SUBSCRIBED TOPIC</string>
    <string name="default_notification_channel_name">FULL APPS</string>
    <string name="screen1_title">Multi Content App</string>
    <string name="screen1_desc">Multi Content App + Reward Coin</string>
    <string name="screen2_title">Various content</string>
    <string name="screen2_desc">You can play so much</string>
    <string name="screen3_title">Online Videos</string>
    <string name="screen3_desc">Streaming online video and audio</string>
    <string name="screen4_title">Search</string>
    <string name="screen4_desc">You can search your favorite content</string>
    <string name="next">Siguiente</string>
    <string name="skip">Cancelar</string>
    <string name="start">Empezar</string>
    <string name="txt_login_username">Usuario</string>
    <string name="txt_login_password">Contraseña</string>
    <string name="txt_register_referral">ID Referencia</string>
    <string name="txt_register_referral_help">Si tiene una identificación de referencia, ¡escriba aquí para recompensarlo!</string>
    <string name="txt_register_referral_not_exist">No se encontró este ID de referencia.</string>
    <string name="txt_forgot_password">¡Olvidé mi contraseña!</string>
    <string name="txt_btn_login">Iniciar sesión</string>
    <string name="txt_no_account">¿No tienes cuenta de usuario?</string>
    <string name="txt_register">Registrarse</string>
    <string name="txt_login">Inicio de sesión de usuario</string>
    <string name="txt_btn_register">Registrarse</string>
    <string name="txt_register_firstname">Nombre</string>
    <string name="txt_register_lastname">Apellido</string>
    <string name="txt_register_email">Email</string>
    <string name="txt_empty_fullname">Ingrese nombre y apellido.</string>
    <string name="txt_empty_mobile">Por favor, ingrese su nombre de usuario.</string>
    <string name="txt_empty_email">Por favor introduzca su correo electrónico.</string>
    <string name="txt_empty_password">Ingrese su contraseña.</string>
    <string name="txt_fullname_length_error">Un mínimo de 3 caracteres.</string>
    <string name="txt_mobile_length_error">Mínimo 5 caracteres.</string>
    <string name="txt_email_length_error">Mínimo 10 caracteres.</string>
    <string name="txt_email_not_valid">El formato de su correo electrónico no es correcto \nEjemplo: TuNombre@Gmail.com</string>
    <string name="txt_password_length_error">Mínimo 8 caracteres.</string>
    <string name="txt_register_success">Registro de éxito. ¡Por favor Iniciar sesión!</string>
    <string name="txt_mobile_is_exist">¡Este nombre de usuario existe!</string>
    <string name="txt_email_is_exist">¡Este correo electrónico existe!</string>
    <string name="txt_success_login">¡Ingresa exitosamente!</string>
    <string name="txt_failed_login">Nombre de usuario o contraseña incorrecta</string>
    <string name="txt_logout_successfully">Cerrar sesión</string>
    <string name="txt_please_login_first">Por favor, ingrese a su cuenta.</string>
    <string name="txt_bookmark_login">Iniciar sesión</string>
    <string name="txt_viewed">Visto</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="nav_header_title">Sample App</string>
    <string name="nav_header_subtitle">Video Channel</string>
    <string name="nav_header_desc">Nav Description</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_category">Categorías</string>
    <string name="nav_bookmark">Marcadores</string>
    <string name="nav_about_app">Acerca de la aplicación</string>
    <string name="nav_reward_coin">Recompensa</string>
    <string name="nav_account_upgrade">Actualización de cuenta</string>
    <string name="nav_contact">Contactanos</string>
    <string name="nav_terms">Condiciones</string>
    <string name="nav_share_app">Compartir</string>
    <string name="nav_settings">Ajustes</string>
    <string name="nav_txt_others">Cuenta</string>
    <string name="nav_login">Inicio de sesión</string>
    <string name="nav_register">Registrar nuevo usuario</string>
    <string name="nav_my_profile">Mi perfil</string>
    <string name="nav_exit">Cerrar sesión</string>
    <string name="txt_ways_to_contact_us">Formas de contactar con nosotros</string>
    <string name="txt_please_give_a_fair_rating">Por favor, dé una calificación justa</string>
    <string name="action_settings">Ajustes</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_about_us">Sobre nosotros</string>
    <string name="menu_contact_us">Contactanos</string>
    <string name="menu_terms">Condiciones</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_back">Back</string>
    <string name="txt_yes">Si</string>
    <string name="txt_no">No</string>
    <string name="txt_ok">OK</string>
    <string name="txt_confirm_exit">¿Quieres salir?</string>
    <string name="txt_exit">Salir</string>
    <string name="txt_loading_category">En progreso...</string>
    <string name="txt_loading">En progreso...</string>
    <string name="txt_error">Error !!!</string>
    <string name="txt_no_internet">Sin conexión a Internet!</string>
    <string name="txt_retry">Inténtalo de nuevo</string>
    <string name="txt_sub_category">subcategoría</string>
    <string name="txt_no_result">Nada Encontrado!</string>
    <string name="txt_no_slider_found">No se encontró control deslizante!</string>
    <string name="txt_no_more_result">Nada más encontrado!</string>
    <string name="txt_items_list">Lista de contenido</string>
    <string name="txt_show_content">Mostrar</string>
    <string name="txt_not_supported">No soportado!</string>
    <string name="txt_featured_title">Destacados</string>
    <string name="txt_best_rated_title">Mejor Valorado</string>
    <string name="txt_latest_title">Recientes</string>
    <string name="txt_special_title">Especial</string>
    <string name="txt_view_title">Mas visto</string>
    <string name="txt_show_all">Mostrar todo</string>
    <string name="txt_search_keyword">Palabras clave...</string>
    <string name="txt_btn_search">Buscar</string>
    <string name="txt_please_enter_keyword">Ingrese palabras clave!</string>
    <string name="txt_enter_keyword">Ingrese palabras claves</string>
    <string name="txt_keyword_too_short">Un mínimo de 3 caracteres!</string>
    <string name="txt_share">Hola, me gustaría compartir esta aplicación contigo:\n
        https://play.google.com/store/apps/details?id=com.renovationapps.cuentosprincesass</string>
    <string name="about_app_name">Nombre de la aplicación</string>
    <string name="about_app_version">Versión</string>
    <string name="about_app_email">Email</string>
    <string name="sub_about_app_email">renovation.apps2000@gmail.com</string>
    <string name="about_app_copyright">Derechos de autor</string>
    <string name="about_app_rate">Rango</string>
    <string name="about_app_more">Más</string>
    <string name="about_us">Acerca de</string>
    <string name="sub_about_us">Acerca de nosotros</string>
    <string name="about_app_terms">Condiciones</string>
    <string name="sub_about_app_terms">Términos de servicio</string>
    <string name="about_app_privacy_policy">Política de privacidad</string>
    <string name="sub_about_app_privacy_policy">Política de privacidad</string>
    <string name="about_app_gdpr_law">Ley GDPR</string>
    <string name="sub_about_app_gdpr_law">Contenido de la ley GDPR</string>
    <string name="sub_about_app_version">Versión:</string>
    <string name="about_app_website">Sitio web</string>
    <string name="sub_about_app_website">https://powerapps10.com</string>
    <string name="sub_about_app_copyright">Todos los derechos reservados.
    &#169; 2020
    </string>
    <string name="sub_about_app">Bienvenido al canal de video</string>
    <string name="about_app_developer">Diseñado y desarrollado</string>
    <string name="sub_about_app_developer">Renovation Apps</string>
    <string name="about_app_help">Recompensa</string>
    <string name="sub_about_app_help">Como ganar monedas?</string>
    <string name="title_activity_one_content">Mostrar un contenido</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="txt_get_update">Descargar nueva versión</string>
    <string name="txt_check_update_title">Actualizar</string>
    <string name="txt_check_update_msg">Hay una nueva actualización disponible. ¡Por favor actualice!</string>
    <string name="txt_later">Más tarde</string>
    <string name="txt_update_url">https://play.google.com/store/apps/details?id=com.renovationapps.cuentosprincesas</string>
    <string name="txt_maintenance_title">Modo de mantenimiento</string>
    <string name="txt_my_profile">Mi perfil</string>
    <string name="txt_credit">Balance de crédito</string>
    <string name="txt_username">Nombre de usuario</string>
    <string name="txt_currency">$</string>
    <string name="txt_currency_suffix">USD</string>
    <string name="txt_profile_role">Rol del usuario</string>
    <string name="txt_profile_web_login">Para actualizar la información de su perfil, inicie sesión en nuestra \"Versión web\", con su nombre de usuario y contraseña.</string>
    <string name="txt_profile_web_login_btn">Versión web</string>
    <string name="txt_user_profile_information_not_found">No se encontró la información del usuario. Inténtalo de nuevo.</string>
    <string name="txt_whoops">Ups!</string>
    <string name="txt_no_network_connection_found">No se encontró conexión de red.</string>
    <string name="txt_try_again">Inténtalo de nuevo</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_this_function_is_not_support_here">Esta función no es compatible aquí.</string>
    <string name="txt_click_back_again_to_exit">¡Vuelva a hacer clic en Atrás para salir!</string>
    <string name="txt_hide">ESCONDER</string>
    <string name="txt_advertising">Publicidad</string>
    <string name="txt_loading_ad">Cargando anuncio...</string>
    <string name="txt_button_open">Abrir</string>
    <string name="txt_button_show">Mostrar en la web</string>
    <string name="txt_button_play">Play</string>
    <string name="txt_button_play_video">Reproduce el video</string>
    <string name="txt_button_play_music">Reproducir música</string>
    <string name="txt_button_play_game">Jugar un juego</string>
    <string name="txt_button_download">Descargar</string>
    <string name="txt_add_comment">Escribe una reseña</string>
    <string name="txt_show_comment">Mostrar reseñas</string>
    <string name="txt_add_bookmark">Añadir a marcadores</string>
    <string name="recomended">Recomendados</string>
    <string name="more_apps">Mas aplicaciones</string>
    <string name="share_this_app">Comparte esta aplicacion</string>
    <string name="title_dialo">ACTUALIZACIÓN</string>
    <string name="Button_accept">ACEPTAR</string>
    <string name="Button_Cancel">CANCELAR</string>
    <string name="sure_exit">¿Seguro que quieres salir de la aplicación?</string>
    <string name="cancel">Cancelar</string>
    <string name="exit">Salir</string>
    <string name="rateapp">CALIFICANOS</string>
    <string name="rate_star">Califícanos con 5 estrellas!</string>
    <string name="dialogexit">Si te gusta nuestra aplicación, por favor dejanos una buena opinion</string>
</resources>