<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/spacing_middle"
                app:srcCompat="@drawable/ic_baseline_warning_50" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_dialo"
                android:shadowColor="@color/overlay_dark_50"
                android:shadowDx="0"
                android:shadowDy="4"
                android:shadowRadius="5"
                android:textColor="@color/yellow_700"
                android:textSize="@dimen/txt_xxxxlarge"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_mlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginRight="@dimen/spacing_mlarge">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="TITLE"
                android:textSize="@dimen/txt_xxlarge" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_middle">

            <LinearLayout
                android:gravity="center"
                android:id="@+id/accept"
                android:background="@drawable/button_rounded"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xlarge"
                android:layout_marginLeft="@dimen/spacing_mxlarge"
                android:layout_marginRight="@dimen/spacing_mxlarge">

                <TextView
                    android:textSize="@dimen/txt_xlarge"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Button_accept" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginBottom="@dimen/spacing_mlarge">

            <LinearLayout
                android:gravity="center"
                android:id="@+id/cancel"
                android:background="@drawable/button_rounded"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xlarge"
                android:layout_marginLeft="@dimen/spacing_mxlarge"
                android:layout_marginRight="@dimen/spacing_mxlarge">

                <TextView
                    android:textSize="@dimen/txt_xlarge"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Button_Cancel" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>